--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="./Article/Article.js" defer></script>
   </head>
   <body>
-    <div class="header">
-      <img class="menu-button" src="./assets/menu.png"/>
+    <div class="header non-click">
+      <img class="menu-button non-close" src="./assets/menu.png"/>
       <h1>Lambda School Newsfeed</h1>
     </div>
     <div class="articles"></div>
