--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./Article/Article.js" defer></script>
   </head>
   <body>
-    <div class="header non-click">
+    <div class="header non-close">
       <img class="menu-button non-close" src="./assets/menu.png"/>
       <h1>Lambda School Newsfeed</h1>
     </div>
